2019-10-29  Richard Sandiford  <richard.sandiford@arm.com>

	* langhooks.h (lang_hooks::simulate_builtin_function_decl): New hook.
	(simulate_builtin_function_decl): Declare.
	* langhooks-def.h (LANG_HOOKS_SIMULATE_BUILTIN_FUNCTION_DECL): Define.
	(LANG_HOOKS_INITIALIZER): Include it.
	* langhooks.c (add_builtin_function_common): Rename to...
	(build_builtin_function): ...this.  Add a location parameter and use
	it instead of BUILTINS_LOCATION.  Remove the hook parameter and return
	the decl instead.
	(add_builtin_function): Update accordingly, passing the returned
	decl to the lang hook.
	(add_builtin_function_ext_scope): Likewise
	(simulate_builtin_function_decl): New function.

2019-10-29  Jakub Jelinek  <jakub@redhat.com>

	* doc/install.texi (--enable-offload-targets): Fix up a typo in the
	example, use actual names of supported offload targets.

	PR target/92258
	* config/i386/sse.md (iptr): Revert 2019-10-27 change.

2019-10-28  Martin Sebor  <msebor@redhat.com>

	* tree-ssa-strlen.c (get_addr_stridx): Add argument and use it.
	(handle_store): Pass argument to get_addr_stridx.

2019-10-28  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92226
	* tree-ssa-strlen.c (compare_nonzero_chars): Return -1 also when
	the offset is in the open range outlined by SI's length.

2019-10-28  Martin Sebor  <msebor@redhat.com>

	PR c/66970
	* doc/cpp.texi (__has_builtin): Document.
	* doc/extend.texi (__builtin_frob_return_addr): Correct spelling.

2019-10-28  Mihailo Stojanovic  <mistojanovic@wavecomp.com>

	PR target/82981
	* config/mips/mips.md (<u>mulditi3): Generate patterns for high
	doubleword and low doubleword result of multiplication on
	MIPS64R6.

	* config/mips/mips.c (DIRECT_BUILTIN_PURE): New macro. Add a
	pure qualifier to the built-in.
	(MSA_BUILTIN_PURE): New macro. Add a pure qualifier to the MSA
	built-ins.
	(struct mips_builtin_description): Add is_pure flag.
	(mips_init_builtins): Mark built-in as pure if the flag in the