@@ -1,5 +1,11 @@
 2019-10-29  Richard Sandiford  <richard.sandiford@arm.com>
 
+	* cp-objcp-common.h (cxx_simulate_enum_decl): Declare.
+	(LANG_HOOKS_SIMULATE_ENUM_DECL): Define to the above.
+	* decl.c (cxx_simulate_enum_decl): New function.
+
+2019-10-29  Richard Sandiford  <richard.sandiford@arm.com>
+
 	* cp-tree.h (cxx_simulate_builtin_function_decl): Declare.
 	* decl.c (cxx_simulate_builtin_function_decl): New function.
 	* cp-objcp-common.h (LANG_HOOKS_SIMULATE_BUILTIN_FUNCTION_DECL): Define
